Joseki3
=======

Joseki3 is not compatible with Joseki2.

+ Supports the SPARQL protocol over HTTP (Last Call version)
+ Supports the SPARQL query language (Last Call version)

+ HTTP protocol - done
+ SOAP protocol - done but highly experimental.

+ Jar changes for Jetty6 and other upgrades

== Changes from Joseki 3.0 beta 1&2

+ The configuration file now uses Jena assembler vocabulary for datasets, as well as graphs.






