@@ -81,9 +81,17 @@
 
 <tr>
   <td><a href="http://woodstox.codehaus.org/">WoodSToX StAX parser</a></td>
-  <td>StAX API 1.0 / Impl 2.8</td>
-  <td><a href="http://woodstox.codehaus.org/Download">Apache 2 License</a></td>
+  <td>StAX API 1.0 / Impl 3.0.0</td>
+  <td><a href="http://woodstox.codehaus.org/Download">Apache 2 License</a> (also 
+	available as LGPL)</td>
 </tr>
+
+<tr>
+  <td><a href="http://www.json.org/">JSON</a> Java library</td>
+  <td>&nbsp;</td>
+  <td><a href="http://www.json.org/license.html">JSON License</a></td>
+</tr>
+
 </tbody>
 </table>
 </div>
