@@ -1,20 +1,10 @@
-/*
- * (c) Copyright 2003, 2004, 2005, 2006 Hewlett-Packard Development Company, LP
- * [See end of file]
- */
-
-/* Vocabulary Class generated by Jena vocabulary generator
- *
- * Version $Id: JosekiSchema.java,v 1.6 2006-10-03 11:04:42 andy_seaborne Exp $
- */
-
-package org.joseki.vocabulary;
-
+/* CVS $Id: JosekiSchema.java,v 1.1 2006-10-03 11:04:41 andy_seaborne Exp $ */
+ 
 import com.hp.hpl.jena.rdf.model.*;
  
 /**
  * Vocabulary definitions from joseki-schema.ttl 
- * @author Auto-generated by schemagen on 03 Oct 2006 11:27 
+ * @author Auto-generated by schemagen on 03 Oct 2006 11:34 
  */
 public class JosekiSchema {
     /** <p>The RDF model that holds the vocabulary terms</p> */
@@ -70,33 +60,5 @@ public class JosekiSchema {
     
     /** <p>Server</p> */
     public static final Resource Server = m_model.createResource( "http://joseki.org/2005/06/configuration#Server" );
-
+    
 }
-
-
-/*
- *  (c) Copyright 2003, 2004, 2005, 2006 Hewlett-Packard Development Company, LP
- *  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions
- * are met:
- * 1. Redistributions of source code must retain the above copyright
- *    notice, this list of conditions and the following disclaimer.
- * 2. Redistributions in binary form must reproduce the above copyright
- *    notice, this list of conditions and the following disclaimer in the
- *    documentation and/or other materials provided with the distribution.
- * 3. The name of the author may not be used to endorse or promote products
- *    derived from this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
- * IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
- * OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
- * IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
- * NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
- * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
- * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
- * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
- * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
- */
